[tool.poetry]
name = "repl_python3_Day-8-Project-Caesar-Cipher"
version = "0.1.0"
description = ""
authors = ["Jan-CarloCarl13 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
art = "^5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
